...
            NavigationLink(destination: AuthenticateView(showAuth: self.$showAuth), isActive: $showAuth){
                Button(action: {
                    self.showAuth.toggle()
                }
                    
                ){
                    Text("Login").foregroundColor(.black).frame(width: UIScreen.main.bounds.width * 0.70,height: 50)
                        .overlay(
                            RoundedRectangle(cornerRadius: 20)
                                .stroke(Color.yellow, lineWidth: 4)
                    )
                }
                
...
            
            GeometryReader{geo in
                
                ScrollView(UIScreen.main.bounds.height < 750 ? . vertical :(self.height == 0 ? .init(): .vertical),showsIndicators: false){
                    VStack(spacing:5){
                        
                        Image("login_tree").resizable()
                            .aspectRatio(contentMode: .fit)
                            .frame(width: geo.size.width * 0.60, height: geo.size.height/3, alignment: .center)
                        
                        
                        
                        //MARK: Login
...
                                
                                
                            }
                            
                            
                        }){
                            Text("Sign In").frame(width: UIScreen.main.bounds.width - 30,height: 50)
                            
                        }.foregroundColor(.black)
                            .background(Color.yellow)
                            .cornerRadius(20)
                            .navigationBarTitle("")
                            .navigationBarHidden(true)
...
                ActivityIndicator()
            }
            
        }
        .padding()
        .alert(isPresented: $alert) {
            Alert(title: Text("Incorrect username and / or password."), message: Text(self.msg), dismissButton: .default(Text("Ok")))
            
        }
        
    }
    
}
...
