...
                    
                    if showShimmer{
                        ForEach(0 ..< 4) { number in
                            CardShimmer(height: UIScreen.main.bounds.height / 6 - 10)
                        }
                    }else{
                        StaticCard(headerText: "Total Elections", numberElections:electionCountManager.electionCountModel.electionTotalCountValue , cardColor: "_Purple").transition(.move(edge: .leading))
                        StaticCard(headerText: "Active Elections", numberElections: electionCountManager.electionCountModel.electionActiveCountValue,cardColor: "Blue").transition(.move(edge: .trailing))
                        StaticCard(headerText: "Finished Elections", numberElections: electionCountManager.electionCountModel.electionFinishedCountValue,cardColor: "Pink").transition(.move(edge: .leading))
                        StaticCard(headerText: "Pending Elections", numberElections:electionCountManager.electionCountModel.electionPendingCountValue,cardColor: "Red").transition(.move(edge: .trailing))
                    }
                }
                
...
